# rusty-card

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile
src/: config.rs  error.rs  firebase.rs  interactions.rs  main.rs  main_old.rs  misc.rs  rusty-cards-firebase-adminsdk-gcwvj-251c2ea63b.json
src/commands/: cards.rs  mod.rs
