[package]
name = "rusty-cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv="0.15.0"
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
firebase-rs = "2.0.1"
serde = "1.0.137"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde_json = "1.0.81"
rand = "0.8.5"