[package]
name = "rusty-cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv="0.15.0"
serenity = { version = "0.11.2", default-features = false, features = ["builder", "client", "gateway", "cache", "collector", "framework", "standard_framework", "rustls_backend"] }
serde = "1.0.137"
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
reqwest = { version = "0.11.10", features = ["blocking"] }
serde_json = "1.0.81"
rand = "0.8.5"
tracing = "0.1.23"
tracing-subscriber = "0.3.11"